Remove domaim from ical path

--- a/_data/calendars.yml
+++ b/_data/calendars.yml
@@ -7,91 +7,91 @@ bin_collections:
           -
             name: G1
             id: monday_g1
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_monday_g1_bin_schedule.ics
+            ics: /ical/gedling_borough_council_monday_g1_bin_schedule.ics
           -
             name: G2
             id: monday_g2
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_monday_g2_bin_schedule.ics
+            ics: /ical/gedling_borough_council_monday_g2_bin_schedule.ics
           -
             name: G3
             id: monday_g3
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_monday_g3_bin_schedule.ics
+            ics: /ical/gedling_borough_council_monday_g3_bin_schedule.ics
           -
             name: G4
             id: monday_g4
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_monday_g4_bin_schedule.ics
+            ics: /ical/gedling_borough_council_monday_g4_bin_schedule.ics
 
       Tuesday:
           -
             name: G1
             id: tuesday_g1
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_tuesday_g1_bin_schedule.ics
+            ics: /ical/gedling_borough_council_tuesday_g1_bin_schedule.ics
           -
             name: G2
             id: tuesday_g2
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_tuesday_g2_bin_schedule.ics
+            ics: /ical/gedling_borough_council_tuesday_g2_bin_schedule.ics
           -
             name: G3
             id: tuesday_g3
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_tuesday_g3_bin_schedule.ics
+            ics: /ical/gedling_borough_council_tuesday_g3_bin_schedule.ics
           -
             name: G4
             id: tuesday_g4
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_tuesday_g4_bin_schedule.ics
+            ics: /ical/gedling_borough_council_tuesday_g4_bin_schedule.ics
 
       Wednesday:
           -
             name: G1
             id: wednesday_g1
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_wednesday_g1_bin_schedule.ics
+            ics: /ical/gedling_borough_council_wednesday_g1_bin_schedule.ics
           -
             name: G2
             id: wednesday_g2
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_wednesday_g2_bin_schedule.ics
+            ics: /ical/gedling_borough_council_wednesday_g2_bin_schedule.ics
           -
             name: G3
             id: wednesday_g3
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_wednesday_g3_bin_schedule.ics
+            ics: /ical/gedling_borough_council_wednesday_g3_bin_schedule.ics
           -
             name: G4
             id: wednesday_g4
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_wednesday_g4_bin_schedule.ics
+            ics: /ical/gedling_borough_council_wednesday_g4_bin_schedule.ics
 
       Thursday:
           -
             name: G1
             id: thursday_g1
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_thursday_g1_bin_schedule.ics
+            ics: /ical/gedling_borough_council_thursday_g1_bin_schedule.ics
           -
             name: G2
             id: thursday_g2
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_thursday_g2_bin_schedule.ics
+            ics: /ical/gedling_borough_council_thursday_g2_bin_schedule.ics
           -
             name: G3
             id: thursday_g3
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_thursday_g3_bin_schedule.ics
+            ics: /ical/gedling_borough_council_thursday_g3_bin_schedule.ics
           -
             name: G4
             id: thursday_g4
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_thursday_g4_bin_schedule.ics
+            ics: /ical/gedling_borough_council_thursday_g4_bin_schedule.ics
 
       Friday:
           -
             name: G1
             id: friday_g1
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_friday_g1_bin_schedule.ics
+            ics: /ical/gedling_borough_council_friday_g1_bin_schedule.ics
           -
             name: G2
             id: friday_g2
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_friday_g2_bin_schedule.ics
+            ics: /ical/gedling_borough_council_friday_g2_bin_schedule.ics
           -
             name: G3
             id: friday_g3
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_friday_g3_bin_schedule.ics
+            ics: /ical/gedling_borough_council_friday_g3_bin_schedule.ics
           -
             name: G4
             id: friday_g4
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_friday_g4_bin_schedule.ics
+            ics: /ical/gedling_borough_council_friday_g4_bin_schedule.ics
 
   - name: "Garden Waste Collections"
     id: "garden"
@@ -102,48 +102,48 @@ bin_collections:
           -
             name: A
             id: garden_a
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_monday_a_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_monday_a_garden_bin_schedule.ics
           -
             name: F
             id: garden_f
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_monday_f_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_monday_f_garden_bin_schedule.ics
 
       Tuesday:
           -
             name: B
             id: garden_b
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_tuesday_b_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_tuesday_b_garden_bin_schedule.ics
           -
             name: G
             id: garden_g
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_tuesday_g_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_tuesday_g_garden_bin_schedule.ics
 
       Wednesday:
           - 
             name: C
             id: garden_c
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_wednesday_c_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_wednesday_c_garden_bin_schedule.ics
           -
             name: H
             id: garden_h
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_wednesday_h_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_wednesday_h_garden_bin_schedule.ics
 
       Thursday:
           - 
             name: D
             id: garden_d
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_thursday_d_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_thursday_d_garden_bin_schedule.ics
           - 
             name: I
             id: garden_i
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_thursday_i_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_thursday_i_garden_bin_schedule.ics
 
       Friday:
           - 
             name: E
             id: garden_e
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_friday_e_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_friday_e_garden_bin_schedule.ics
           -
             name: J
             id: garden_j
-            ics: https://www.gbcbincalendars.co.uk/ical/gedling_borough_council_friday_j_garden_bin_schedule.ics
+            ics: /ical/gedling_borough_council_friday_j_garden_bin_schedule.ics
