--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-primer
 url: "https://www.gbcbincalendars.co.uk"
-baseurl: ""
 title: "Gedling Borough Council Refuse Collection Calendars"
 plugins:
   - jekyll-seo-tag
@@ -17,3 +16,11 @@ exclude:
 
 sass:
   style: compressed
+  load_paths:
+    - node_modules/
+
+# Custom
+gtm: 
+  container_id: GTM-P3MHVNSB
+  auth: J1DjljiZzoVaDdrd1ACJBw
+  preview: env-3
