Publish JSON endpoints

--- a/_data/calendars.yml
+++ b/_data/calendars.yml
@@ -8,90 +8,110 @@ bin_collections:
             name: G1
             id: monday_g1
             ics: /ical/gedling_borough_council_monday_g1_bin_schedule.ics
+            json: /json/gedling_borough_council_monday_g1_bin_schedule.json
           -
             name: G2
             id: monday_g2
             ics: /ical/gedling_borough_council_monday_g2_bin_schedule.ics
+            json: /json/gedling_borough_council_monday_g2_bin_schedule.json
           -
             name: G3
             id: monday_g3
             ics: /ical/gedling_borough_council_monday_g3_bin_schedule.ics
+            json: /json/gedling_borough_council_monday_g3_bin_schedule.json
           -
             name: G4
             id: monday_g4
             ics: /ical/gedling_borough_council_monday_g4_bin_schedule.ics
+            json: /json/gedling_borough_council_monday_g4_bin_schedule.json
 
       Tuesday:
           -
             name: G1
             id: tuesday_g1
             ics: /ical/gedling_borough_council_tuesday_g1_bin_schedule.ics
+            json: /json/gedling_borough_council_tuesday_g1_bin_schedule.json
           -
             name: G2
             id: tuesday_g2
             ics: /ical/gedling_borough_council_tuesday_g2_bin_schedule.ics
+            json: /json/gedling_borough_council_tuesday_g2_bin_schedule.json
           -
             name: G3
             id: tuesday_g3
             ics: /ical/gedling_borough_council_tuesday_g3_bin_schedule.ics
+            json: /json/gedling_borough_council_tuesday_g3_bin_schedule.json
           -
             name: G4
             id: tuesday_g4
             ics: /ical/gedling_borough_council_tuesday_g4_bin_schedule.ics
+            json: /json/gedling_borough_council_tuesday_g4_bin_schedule.json
 
       Wednesday:
           -
             name: G1
             id: wednesday_g1
             ics: /ical/gedling_borough_council_wednesday_g1_bin_schedule.ics
+            json: /json/gedling_borough_council_wednesday_g1_bin_schedule.json
           -
             name: G2
             id: wednesday_g2
             ics: /ical/gedling_borough_council_wednesday_g2_bin_schedule.ics
+            json: /json/gedling_borough_council_wednesday_g2_bin_schedule.json
           -
             name: G3
             id: wednesday_g3
             ics: /ical/gedling_borough_council_wednesday_g3_bin_schedule.ics
+            json: /json/gedling_borough_council_wednesday_g3_bin_schedule.json
           -
             name: G4
             id: wednesday_g4
             ics: /ical/gedling_borough_council_wednesday_g4_bin_schedule.ics
+            json: /json/gedling_borough_council_wednesday_g4_bin_schedule.json
 
       Thursday:
           -
             name: G1
             id: thursday_g1
             ics: /ical/gedling_borough_council_thursday_g1_bin_schedule.ics
+            json: /json/gedling_borough_council_thursday_g1_bin_schedule.json
           -
             name: G2
             id: thursday_g2
             ics: /ical/gedling_borough_council_thursday_g2_bin_schedule.ics
+            json: /json/gedling_borough_council_thursday_g2_bin_schedule.json
           -
             name: G3
             id: thursday_g3
             ics: /ical/gedling_borough_council_thursday_g3_bin_schedule.ics
+            json: /json/gedling_borough_council_thursday_g3_bin_schedule.json
           -
             name: G4
             id: thursday_g4
             ics: /ical/gedling_borough_council_thursday_g4_bin_schedule.ics
+            json: /json/gedling_borough_council_thursday_g4_bin_schedule.json
 
       Friday:
           -
             name: G1
             id: friday_g1
             ics: /ical/gedling_borough_council_friday_g1_bin_schedule.ics
+            json: /json/gedling_borough_council_friday_g1_bin_schedule.json
           -
             name: G2
             id: friday_g2
             ics: /ical/gedling_borough_council_friday_g2_bin_schedule.ics
+            json: /json/gedling_borough_council_friday_g2_bin_schedule.json
           -
             name: G3
             id: friday_g3
             ics: /ical/gedling_borough_council_friday_g3_bin_schedule.ics
+            json: /json/gedling_borough_council_friday_g3_bin_schedule.json
           -
             name: G4
             id: friday_g4
             ics: /ical/gedling_borough_council_friday_g4_bin_schedule.ics
+            json: /json/gedling_borough_council_friday_g4_bin_schedule.json
 
   - name: "Garden Waste Collections"
     id: "garden"
@@ -103,47 +123,57 @@ bin_collections:
             name: A
             id: garden_a
             ics: /ical/gedling_borough_council_monday_a_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_monday_a_garden_bin_schedule.json
           -
             name: F
             id: garden_f
             ics: /ical/gedling_borough_council_monday_f_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_monday_f_garden_bin_schedule.json
 
       Tuesday:
           -
             name: B
             id: garden_b
             ics: /ical/gedling_borough_council_tuesday_b_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_tuesday_b_garden_bin_schedule.json
           -
             name: G
             id: garden_g
             ics: /ical/gedling_borough_council_tuesday_g_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_tuesday_g_garden_bin_schedule.json
 
       Wednesday:
           - 
             name: C
             id: garden_c
             ics: /ical/gedling_borough_council_wednesday_c_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_wednesday_c_garden_bin_schedule.json
           -
             name: H
             id: garden_h
             ics: /ical/gedling_borough_council_wednesday_h_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_wednesday_h_garden_bin_schedule.json
 
       Thursday:
           - 
             name: D
             id: garden_d
             ics: /ical/gedling_borough_council_thursday_d_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_thursday_d_garden_bin_schedule.json
           - 
             name: I
             id: garden_i
             ics: /ical/gedling_borough_council_thursday_i_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_thursday_i_garden_bin_schedule.json
 
       Friday:
           - 
             name: E
             id: garden_e
             ics: /ical/gedling_borough_council_friday_e_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_friday_e_garden_bin_schedule.json
           -
             name: J
             id: garden_j
             ics: /ical/gedling_borough_council_friday_j_garden_bin_schedule.ics
+            json: /json/gedling_borough_council_friday_j_garden_bin_schedule.json
