--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,10 +28,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Node.js for JSON endpoints
+      - name: Setup Node.js for JavaScript/JSON build
         uses: actions/setup-node@v4
       - run: npm i
-      - run: npm run ical2json
+      - run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
