--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "fs-jetpack": "^5.1.0",
-    "ical2json": "^3.2.0"
+    "ical-expander": "^3.1.0",
+    "ical2json": "^3.2.0",
+    "underscore": "^1.13.6"
   },
   "scripts": {
     "build": "node ./build.js"
