--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "ical-expander": "^3.1.0",
     "underscore": "^1.13.6"
   },
+  "devDependencies": {
+    "wrangler": "^3.60.3"
+  },
   "scripts": {
-    "build": "node ./build.js"
+    "build": "node ./build.js",
+    "deploy": "wrangler deploy",
+    "dev": "wrangler dev",
+    "start": "wrangler dev"
   }
 }
