Use custom domain for worker

--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,4 @@ gtm:
   auth: J1DjljiZzoVaDdrd1ACJBw
   preview: env-3
 
-collectionSearchUrl: https://gbc-find-bin-collection-schedule.jamesmacwhite.workers.dev?streetName=
+collectionSearchUrl: https://api.gbcbincalendars.co.uk?streetName=
