Adjust search results layout and add search collection page

--- a/_config.yml
+++ b/_config.yml
@@ -31,4 +31,5 @@ gtm:
   auth: J1DjljiZzoVaDdrd1ACJBw
   preview: env-3
 
-collectionSearchUrl: https://api.gbcbincalendars.co.uk?streetName=
+collectionSearchUrl: "https://api.gbcbincalendars.co.uk?streetName="
+gedlingRefuseSearchUrl: https://apps.gedling.gov.uk/refuse/search.aspx
