--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,6 @@
 name = "gbc-find-bin-collection-schedule"
 main = "worker.js"
 compatibility_date = "2024-06-14"
+
+[vars]
+BASE_URL = "https://www.gbcbincalendars.co.uk"
