Set permalink to remove .html

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-primer
 url: "https://www.gbcbincalendars.co.uk"
 title: "Gedling Borough Council Refuse Collection Calendars"
+permalink: /:title
 lang: en-GB
 plugins:
   - jekyll-seo-tag
