--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "bootstrap-icons": "^1.11.3",
     "fs-jetpack": "^5.1.0",
     "ical-expander": "^3.1.0",
-    "node-html-parser": "^6.1.13",
-    "underscore": "^1.13.6"
+    "node-html-parser": "^6.1.13"
   },
   "devDependencies": {
     "wrangler": "^3.60.3"
