--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,14 +28,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Restore Timestamps
+        uses: chetan/git-restore-mtime-action@v1    
+
       - name: Setup Node.js for JavaScript/JSON build
         uses: actions/setup-node@v4
       - run: npm i
       - run: npm run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
