Add GitHub action for automatic deploy of worker

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -9,6 +9,7 @@ on:
     paths-ignore:
       - '.dev.vars'
       - '.editorconfig'
+      - '.github/workflows/cloudflare-worker-deploy.yml'
       - '.gitignore'
       - '.prettierrc'
       - '.vscode/**'
