--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,4 @@ compatibility_date = "2024-06-14"
 
 [vars]
 BASE_URL = "https://www.gbcbincalendars.co.uk"
+GEDLING_APPS_URL = "https://apps.gedling.gov.uk"
