Add unit tests for catching iCal data issues

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -53,6 +53,7 @@ jobs:
         uses: actions/setup-node@v4
       - run: npm i
       - run: npm run build
+      - run: npm run test
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
