--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bootstrap-icons": "^1.11.3",
     "fs-jetpack": "^5.1.0",
     "ical-expander": "^3.1.0",
+    "lodash": "^4.17.21",
     "node-html-parser": "^6.1.13"
   },
   "devDependencies": {
