--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,12 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "gbc-find-bin-collection-schedule"
 main = "worker.js"
-compatibility_date = "2024-06-14"
+compatibility_date = "2024-11-18"
 
 [vars]
 BASE_URL = "https://www.gbcbincalendars.co.uk"
 GEDLING_APPS_URL = "https://apps.gedling.gov.uk"
+
+[observability]
+enabled = true
+head_sampling_rate = 1
