--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
+  "name": "gedling-bin-calendars",
+  "version": "1.0.0",
+  "type": "module",
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "fs-jetpack": "^5.1.0",
     "ical-expander": "^3.1.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.22",
     "node-html-parser": "^6.1.13"
   },
   "devDependencies": {
-    "chai": "^4.4.1",
-    "mocha": "^10.5.2",
+    "chai": "^5.2.0",
+    "mocha": "^11.0",
     "wrangler": "^3.93.0"
   },
   "scripts": {
