--- a/.github/workflows/cloudflare-worker-deploy.yml
+++ b/.github/workflows/cloudflare-worker-deploy.yml
@@ -20,4 +20,5 @@ jobs:
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
+          wranglerVersion: '4.56.0'
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
