--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap-icons": "^1.11.3",
     "fs-jetpack": "^5.1.0",
     "ical-expander": "^3.1.0",
+    "itty-router": "^5.0.22",
     "lodash-es": "^4.17.22",
     "node-html-parser": "^6.1.13"
   },
