Fix API endpoint URL path

--- a/_config.yml
+++ b/_config.yml
@@ -40,5 +40,5 @@ gtm:
   auth: J1DjljiZzoVaDdrd1ACJBw
   preview: env-3
 
-collectionSearchUrl: "https://api.gbcbincalendars.co.uk?streetName="
+collectionSearchUrl: "https://api.gbcbincalendars.co.uk/street-search?streetName="
 gedlingRefuseSearchUrl: https://apps.gedling.gov.uk/refuse/search.aspx
