--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,12 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "gbc-find-bin-collection-schedule"
 main = "worker.js"
+workers_dev = true
 compatibility_date = "2025-12-21"
+compatibility_flags = ["nodejs_compat_v2"]
+
+[browser]
+binding = "MYBROWSER"
 
 [vars]
 BASE_URL = "https://www.gbcbincalendars.co.uk"
