--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,7 +10,8 @@ binding = "MYBROWSER"
 
 [vars]
 BASE_URL = "https://www.gbcbincalendars.co.uk"
-GEDLING_APPS_URL = "https://apps.gedling.gov.uk"
+GEDLING_LEGACY_REFUSE_SEARCH_URL = "https://apps.gedling.gov.uk/refuse/search.aspx"
+GEDLING_BIN_COLLECTIONS_SEARCH_URL = "https://waste.digital.gedling.gov.uk/w/webpage/bin-collections"
 
 [observability]
 enabled = true
