Tweak icon key and display of dynamic calendar data

--- a/_data/icons.yaml
+++ b/_data/icons.yaml
@@ -2,6 +2,6 @@ black-bin: trash-fill
 green-bin: recycle
 green-glass-bin: 
   - recycle
-  - box-fill
-glass-box: box-fill
+  - archive-fill
+glass-box: archive-fill
 garden-bin: flower
