Add routes via config

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,6 +14,10 @@ GEDLING_LEGACY_REFUSE_SEARCH_URL = "https://apps.gedling.gov.uk/refuse/search.as
 GEDLING_BIN_COLLECTIONS_SEARCH_URL = "https://waste.digital.gedling.gov.uk/w/webpage/bin-collections"
 PUPPETEER_BROWSER_TIMEOUT = 15000
 
+[[routes]]
+pattern = "api.gbcbincalendars.co.uk"
+custom_domain = true
+
 [observability]
 [observability.logs]
 enabled = true
